@@ -1,3 +1,6 @@
+6/3/12
+  Added option to have new window at the top of the stack when using attach aside
+
 28/2/12
   Removed remembering the last focused window
 
